[package]
name = "pear-reviewer"
license = "Apache-2.0"
repository = "https://github.com/sapcc/pear-reviewer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1"
clap = { version = "^4", features = ["derive", "env"] }
git2 = "^0"
# change back to crates.io after https://github.com/XAMPPRocky/octocrab/pull/680 got released
octocrab = { version = "^0", git = "https://github.com/SuperSandro2000/octocrab.git", branch = "pr_commits" }
serde = "^1"
serde_yml = "^0"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
url = "^2"
